--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ body.dark .project-card {
 
       <!-- Projet 1 -->
       <div class="col-md-4 reveal">
-        <a href="http://istmkis.gt.tc/?i=1" target="_blank" class="text-decoration-none text-reset">
+        <a href="#" target="_blank" class="text-decoration-none text-reset">
           <div class="project-card rounded-4 shadow-sm h-100 overflow-hidden">
             <div class="project-image">
               <img src="images/librairie.png" alt="Application de gestion de vente" loading="lazy"
@@ -812,7 +812,7 @@ body.dark .project-card {
 
       <!-- Projet 3 -->
       <div class="col-md-4 reveal">
-        <a href="https://exemple-confprog.netlify.app" target="_blank" class="text-decoration-none text-reset">
+        <a href="#" target="_blank" class="text-decoration-none text-reset">
           <div class="project-card rounded-4 shadow-sm h-100 overflow-hidden">
             <div class="project-image">
               <img src="images/img_mobile.jpg" alt="Application mobile CONFPROG" loading="lazy"
@@ -1108,4 +1108,5 @@ document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
+
 
